<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailsActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_background"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_display"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_of_release_display"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/imdbId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imdb_id_display"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_of_movie"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start|bottom"
        android:layout_weight="1"
        android:layout_marginStart="5dp">

        <Button
            android:id="@+id/goBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
            android:layout_marginTop="15dp"/>
    </LinearLayout>




</LinearLayout>